Included bootstrap. Added container class on the parent html element.

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,9 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <!-- Apple icon to be done
-    <link rel="apple-touch-icon" href="Client/images/shared/apple_touch_144x144.png?v=0.3.0.15" />
-    <link rel="apple-touch-icon" sizes="72x72" href="Client/images/shared/apple_touch_72x72.png?v=0.3.0.15" />
-    <link rel="apple-touch-icon" sizes="144x144" href="Client/images/shared/apple_touch_144x144.png?v=0.3.0.15" /> -->
 
-    <!-- WEB COMPONENTS
-    <link href="Client/webcomponents/datepicker/datepicker.css?v=0.3.0.15" rel="stylesheet" />-->
+    <!-- WEB COMPONENTS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- APP -->
     <link href="client/css/compiled/shared.concat.css" rel="stylesheet" />
@@ -39,8 +35,9 @@
 <script src="client/thirdparty/react-0.13.3/react.js"></script>
 <!-- JSXTransformer -->
 <script src="client/thirdparty/react-0.13.3/JSXTransformer.js"></script>
-
+<script src="client/thirdparty/react-bootstrap/react-bootstrap.js"></script>
 <!-- EXTERNAL RESOURCES -->
+
 
 <!-- MODULES TODO: load on demand -->
 
