--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
     <!-- WEB COMPONENTS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
     <!-- APP -->
     <link href="client/css/compiled/shared.concat.css" rel="stylesheet" />
