Added google maps

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
 <!-- JSXTransformer -->
 <script src="client/thirdparty/react-0.13.3/JSXTransformer.js"></script>
 <script src="client/thirdparty/react-bootstrap/react-bootstrap.js"></script>
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApbfoXOpdt8v4wB8spClqDaCsOtOQr4CQ">
+</script>
 <!-- EXTERNAL RESOURCES -->
 
 
