[DV03] Subscribe notification up and running

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <!--jQuery-->
         <script src="client/thirdparty/jquery-2.1.4/jquery-2.1.4.min.js"></script>
         <!-- ReactJS -->
-        <script src="client/thirdparty/react-0.13.3/react.js"></script>
+        <script src="client/thirdparty/react-0.13.3/react-with-addons.min.js"></script>
         <!-- JSXTransformer -->
         <script src="client/thirdparty/react-0.13.3/JSXTransformer.js"></script>
         <script src="client/thirdparty/react-bootstrap/react-bootstrap.js"></script>
